Bug 490861 - Replace new Integer() with Integer.valueOf() in rest of org.eclipse.swt repo
This one is for swt.tests

Change-Id: I3a7ea7626fe0e10fd16ed77c657a07d217acc2cf
Signed-off-by: Lars Vogel <Lars.Vogel@vogella.com>