@@ -156,7 +156,7 @@ public void test_getPrograms() {
 		
 		// test unique hash code
 		int hashCode = programs[i].hashCode();
-		Integer key = new Integer(hashCode);
+		Integer key = Integer.valueOf(hashCode);
 		if (lookup.containsValue(key)) {
 			fail("Duplicate hash code for "+programs[i]+" (same as "+lookup.get(key)+")");
 		}
